5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1602_1014.log
== SUBMITION (2019-03-20 19:23:51) 
-- CODE:
v=int(input())
l=0.3*v
print(l)

-- EXECUTION TIME:
0.153174
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    v=int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:00) 
-- CODE:
v=int(input())
l= 0.3*v
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:46) 
-- CODE:
v=int(input())
l= 0.3*v
print(round(l,2)

-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:53) 
-- CODE:
v=int(input())
l= 0.3*v
print(round(l,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:53) 
-- CODE:
v = int(input())
l= 0.3*v
print(round(l,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:27:04) 
-- CODE:
v = int(input("valor"))
l= 0.3*v
print(round(l,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:27:14) 
-- CODE:
v = float(input("valor"))
l= 0.3*v
print(round(l,2))

-- EXECUTION TIME:
0.201782
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
